--- a/date/2024-10/page-2.htm
+++ b/date/2024-10/page-2.htm
@@ -300,8 +300,48 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-30139.htm">58同城宠物狗免费领养的有没有骗局（58同城宠物专区的领养）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈58同城宠物狗免费领养的有没有骗局，以及58同城宠物专区的领养对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、我想领养一狗狗,见58同..</p>
+                <h4><a href="/free-nodes/2025-1-3-free-clash-subscribe.htm">1月3日更新22.4M/S，2025年最新高速Shadowrocket/Clash/V2ray/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、日本、新加坡、香港、欧洲、加拿大、韩国等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-10-20-shadowrocket-node.htm">10月20日更新23M/S，2024年最新高速SSR/Clash/Shadowrocket/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了日本、欧洲、加拿大、美国、新加坡、香港、韩国等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-10-25-shadowrocket-node.htm">10月25日更新18.5M/S，2024年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了美国、加拿大、新加坡、韩国、香港、欧洲、日本等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-10-7-free-clash.htm">10月7日更新21.1M/S，2024年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了日本、新加坡、香港、韩国、加拿大、欧洲、美国等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-1-18-free-ssr-subscribe.htm">1月18日更新21.5M/S，2025年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、美国、加拿大、新加坡、韩国、香港、日本等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -320,8 +360,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-25475.htm">动物预防接种计划表（动物预防接种实验报告）</a></h4>
-                <p>摘要：       今天给各位分享动物预防接种计划表的知识，其中也会对动物预防接种实验报告进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、怎样编制猪场防疫计划.</p>
+                <h4><a href="/free-nodes/2025-1-19-clash-node-daily-updates.htm">1月19日更新20.8M/S，2025年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了韩国、香港、欧洲、日本、美国、新加坡、加拿大等地区,最高速度可达20.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -330,8 +370,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-1-13-free-clash-subscribe.htm">1月13日更新22.2M/S，2025年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了日本、香港、欧洲、韩国、加拿大、美国、新加坡等地区,最高速度可达22.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-10-16-node-share.htm">10月16日更新21M/S，2024年最新高速SSR/Clash/V2ray/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了香港、日本、欧洲、新加坡、加拿大、美国、韩国等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -340,8 +380,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-42247.htm">动物打疫苗注意事项及禁忌有哪些（动物打疫苗前后要注意什么）</a></h4>
-                <p>摘要：       今天给各位分享动物打疫苗注意事项及禁忌有哪些的知识，其中也会对动物打疫苗前后要注意什么进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、狗狗.</p>
+                <h4><a href="/news/article-35376.htm">厦门市宠物领养中心地址（厦门领养宠物猫中心）</a></h4>
+                <p>摘要：       今天给各位分享厦门市宠物领养中心地址的知识，其中也会对厦门领养宠物猫中心进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、厦门宠物猫在哪买..</p>
             </div>
         </div>
     </div>
@@ -350,48 +390,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-39770.htm">python里函数怎么样使用元组或字典作为参数调用</a></h4>
-                <p>在原来python2里有一个函数apply来做这种事情，如下：  # File: builtin-apply-example-1.py  def function(a, b):     print a</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-10-clash-windows.htm">10月10日更新21.7M/S，2024年最新高速Shadowrocket/Clash/V2ray/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了韩国、美国、欧洲、新加坡、日本、香港、加拿大等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-42743.htm">宠物领养协议模板下载电子版（宠物领养协议书电子版）</a></h4>
-                <p>摘要：       今天给各位分享宠物领养协议模板下载电子版的知识，其中也会对宠物领养协议书电子版进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、领养协议书范.</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-18-node-share.htm">11月18日更新18.3M/S，2024年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、韩国、美国、日本、欧洲、香港、新加坡等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-33474.htm">被猫抓了一下红色划痕会传染吗（被猫抓了红色划痕有事吗）</a></h4>
-                <p>摘要：       今天给各位分享被猫抓了一下红色划痕会传染吗的知识，其中也会对被猫抓了红色划痕有事吗进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、手背被小.</p>
+                <h4><a href="/news/article-22702.htm">动物防疫法2021不牵绳（动物防疫法禁养犬有哪些）</a></h4>
+                <p>摘要：       今天给各位分享动物防疫法2021不牵绳的知识，其中也会对动物防疫法禁养犬有哪些进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、5月1日起遛.</p>
             </div>
         </div>
     </div>
@@ -402,7 +402,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">63</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                                <h4><span class="badge" style="float: right;">66</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
                                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
                                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">25</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
