--- a/date/2024-11/page-3.htm
+++ b/date/2024-11/page-3.htm
@@ -300,28 +300,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-30-shadowrocket-node.htm">11月30日更新21.9M/S，2024年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、加拿大、日本、香港、新加坡、韩国、美国等地区,最高速度可达21.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-32520.htm">佳雯宠物医院环城西路店（佳雯宠物医院环城东路分院怎么样）</a></h4>
-                <p>摘要：       今天给各位分享佳雯宠物医院环城西路店的知识，其中也会对佳雯宠物医院环城东路分院怎么样进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、佳雯宠.</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-11-shadowrocket-node.htm">12月11日更新19M/S，2024年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、新加坡、日本、韩国、香港、美国、加拿大等地区,最高速度可达19 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-41264.htm">C#实现文件Move和Copy操作_C#教程_</a></h4>
+                <p>文件移动(Move)操作和文件的复制(Copy)是C#程式开发经常遇到的方法，根据传入的源文件地址和目标文件地址参数，实现对文件的操作。实现代码如下： Move操作代码  public static </p>
             </div>
         </div>
     </div>
@@ -340,8 +320,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-27801.htm">我所在的城市有一家动物医院英文作文怎么写（我所在的城市有一家动物医院英文改为一船疑问句）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈我所在的城市有一家动物医院英文作文怎么写，以及我所在的城市有一家动物医院英文改为一船疑问句对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：..</p>
+                <h4><a href="/news/article-25475.htm">动物预防接种计划表（动物预防接种实验报告）</a></h4>
+                <p>摘要：       今天给各位分享动物预防接种计划表的知识，其中也会对动物预防接种实验报告进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、怎样编制猪场防疫计划.</p>
             </div>
         </div>
     </div>
@@ -350,8 +330,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-17-clash-node-daily-updates.htm">10月17日更新21.5M/S，2024年最新高速Clash/V2ray/SSR/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、欧洲、加拿大、香港、韩国、美国、新加坡等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-19953.htm">动物疫苗经营范围有哪些内容要求（动物疫苗经营许可）</a></h4>
+                <p>摘要：       今天给各位分享动物疫苗经营范围有哪些内容要求的知识，其中也会对动物疫苗经营许可进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、生物科技有限.</p>
             </div>
         </div>
     </div>
@@ -360,8 +340,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-17-free-node-subscribe-links.htm">11月17日更新22M/S，2024年最新高速SSR/Shadowrocket/V2ray/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、美国、香港、韩国、新加坡、加拿大、欧洲等地区,最高速度可达22 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-26871.htm">哈医大王海洋个人资料（王海云哈尔滨医生）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈哈医大王海洋个人资料，以及王海云哈尔滨医生对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、...最后录像曝光惹心酸,王海洋到底经历了什..</p>
             </div>
         </div>
     </div>
@@ -370,8 +350,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-23620.htm">kotlin 标准函数和静态方法 with、run、apply</a></h4>
-                <p>一.标准函数 1.with函数 with函数接受两个参数，第一个是任意类型的对象，第二个是lambda表达式。 作用：连续调用同一对象的多个方法。返回值是最后一个值 格式如下： val result </p>
+                <h4><a href="/news/article-26870.htm">宠物领养协议模板图片 宠物领养协议模板图片大全</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于宠物领养协议模板图片的问题，于是小编就整理了3个相关介绍宠物领养协议模板图片的解答，让我们一起看看吧。领养猫捆绑合同有法律效应吗</p>
             </div>
         </div>
     </div>
@@ -380,8 +360,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-34903.htm">包含福州免费领养宠物的平台有哪些的词条</a></h4>
-                <p>摘要：       今天给各位分享福州免费领养宠物的平台有哪些的知识，其中也会对进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、谁能推荐几个大型一点的宠物网站.</p>
+                <h4><a href="/news/article-23161.htm">有什么品牌的春天小宝宝衣服值得入手呢(小宝宝的衣服什么牌子好)</a></h4>
+                <p>的小宝宝值得入手？很多朋友对这方面很关心，蝶侠整理了相关文章，供大家参考，一起来看一下吧！本文目录一览：1、棉袄品牌排行榜前十名2、有什么品牌的春天小宝宝衣服值得入手？3、女棉衣品牌大全排行榜(防寒服</p>
             </div>
         </div>
     </div>
@@ -390,8 +370,28 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-1-15-free-high-speed-nodes.htm">1月15日更新18.4M/S，2025年最新高速Shadowrocket/Clash/V2ray/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了美国、香港、加拿大、新加坡、欧洲、日本、韩国等地区,最高速度可达18.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-34429.htm">宠物领养合同有法律效应吗 宠物领养合同有法律效应吗知乎</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于宠物领养合同有法律效应吗的问题，于是小编就整理了5个相关介绍宠物领养合同有法律效应吗的解答，让我们一起看看吧。签订领养宠物协议靠</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-43737.htm">并发编程基础底层原理学习_在线工具</a></h4>
+                <p>进程 进程就是应用程序在内存中分配的空间，也就是正在运行的程序，各个进程之间互不干扰。同时进程保存着程序每一个时刻运行的状态。进程的两个基本元素是程序代码和与代码关联的数据集。进程执行的任意时刻包含了</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-11-9-free-high-speed-nodes.htm">11月9日更新19.9M/S，2024年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了日本、韩国、加拿大、新加坡、美国、香港、欧洲等地区,最高速度可达19.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -402,7 +402,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">66</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                                <h4><span class="badge" style="float: right;">69</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
                                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
                                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">25</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
